Add redoc. Move yaml to separate folder
