# pkg/rest/api/api_order_books_service.go
@@ -31,8 +31,8 @@ func (s *OrderBooksAPIService) GetOrderBook(ctx context.Context, instrumentName 
 	// TODO - update GetOrderBook with the required logic for this service method.
 	// Add api_order_books_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
-	// TODO: Uncomment the next line to return response Response(200, GetOrderBook200Response{}) or use other options such as http.Ok ...
-	// return Response(200, GetOrderBook200Response{}), nil
+	// TODO: Uncomment the next line to return response Response(200, OrderBook{}) or use other options such as http.Ok ...
+	// return Response(200, OrderBook{}), nil
 
 	// TODO: Uncomment the next line to return response Response(500, {}) or use other options such as http.Ok ...
 	// return Response(500, nil),nil
