# pkg/rest/api/model_currency.go
@@ -1,0 +1,30 @@
+/*
+ * OPEN OUTCRY API
+ *
+ * # Introduction This API is documented in **OpenAPI 3.0 format**.  This API the following operations: * Retrieve a list of available instruments * Retrieve a list of executed trades  # Basics * API calls have to be secured with HTTPS. * All data has to be submitted UTF-8 encoded. * The reply is sent JSON encoded.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+// Currency - Currency of payment account
+type Currency struct {
+
+	// ISO 4217 Currency symbol
+	Name *interface{} `json:"name,omitempty"`
+
+	// Currency precision as number of decimal points
+	Precision *interface{} `json:"precision,omitempty"`
+}
+
+// AssertCurrencyRequired checks if the required fields are not zero-ed
+func AssertCurrencyRequired(obj Currency) error {
+	return nil
+}
+
+// AssertCurrencyConstraints checks if the values respects the defined constraints
+func AssertCurrencyConstraints(obj Currency) error {
+	return nil
+}
