# pkg/rest/api/model_instrument.go
@@ -1,0 +1,36 @@
+/*
+ * OPEN OUTCRY API
+ *
+ * # Introduction This API is documented in **OpenAPI 3.0 format**.  This API the following operations: * Retrieve a list of available instruments * Retrieve a list of executed trades  # Basics * API calls have to be secured with HTTPS. * All data has to be submitted UTF-8 encoded. * The reply is sent JSON encoded.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+type Instrument struct {
+	Id *interface{} `json:"id,omitempty"`
+
+	// Ticker-like name of the instrument. For monetary instruments, a currency pair is used.
+	Name *interface{} `json:"name,omitempty"`
+
+	// ISO 4217 Currency symbol
+	BaseCurrency *interface{} `json:"base_currency,omitempty"`
+
+	// ISO 4217 Currency symbol
+	QuoteCurrency *interface{} `json:"quote_currency,omitempty"`
+
+	// Availability for trading
+	Enabled *interface{} `json:"enabled,omitempty"`
+}
+
+// AssertInstrumentRequired checks if the required fields are not zero-ed
+func AssertInstrumentRequired(obj Instrument) error {
+	return nil
+}
+
+// AssertInstrumentConstraints checks if the values respects the defined constraints
+func AssertInstrumentConstraints(obj Instrument) error {
+	return nil
+}
