# pkg/rest/api/model_trade_order_status.go
@@ -1,0 +1,23 @@
+/*
+ * OPEN OUTCRY API
+ *
+ * # Introduction This API is documented in **OpenAPI 3.0 format**.  This API the following operations: * Retrieve a list of available instruments * Retrieve a list of executed trades  # Basics * API calls have to be secured with HTTPS. * All data has to be submitted UTF-8 encoded. * The reply is sent JSON encoded.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+type TradeOrderStatus struct {
+}
+
+// AssertTradeOrderStatusRequired checks if the required fields are not zero-ed
+func AssertTradeOrderStatusRequired(obj TradeOrderStatus) error {
+	return nil
+}
+
+// AssertTradeOrderStatusConstraints checks if the values respects the defined constraints
+func AssertTradeOrderStatusConstraints(obj TradeOrderStatus) error {
+	return nil
+}
